# telnet_server

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cargo-audit.yml  cargo-test.yml  docker-image.yml
resources/: ascii.txt  rfc1184.txt  rfc854.txt
src/: iter.rs  lib.rs  main.rs  tcp.rs  telnet.rs
telnet_docker/: Dockerfile  run_telnet.sh
